--- a/_quarto.yml
+++ b/_quarto.yml
@@ -48,7 +48,9 @@ website:
         href: https://twitter.com/datas_idea
 format:
   html:
-    theme: cosmo
+    theme:
+      light: flatly
+      dark: darkly
     css: styles.css
     toc: true
     lang: fr
